Fixed `GroupingChooser` layout issue
- Visible only when favorites are disabled
- For hotfix release as v74.1.2

--- a/desktop/cmp/grouping/GroupingChooser.scss
+++ b/desktop/cmp/grouping/GroupingChooser.scss
@@ -42,6 +42,12 @@
         width: 40%;
       }
     }
+
+    &--faves-disabled {
+      .xh-grouping-chooser__editor {
+        flex: 1;
+      }
+    }
   }
 
   &__list {
